# lot-doctor

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: mod.rs
src-tauri/src/report/: mod.rs
src-tauri/src/scanner/: arp.rs  fingerprint.rs  mdns.rs  mod.rs  nbns.rs  ports.rs  ssdp.rs
src-tauri/src/vulndb/: mod.rs
src/lib/components/: Dashboard.svelte  DeviceCard.svelte  Header.svelte  SecurityScore.svelte
src/lib/stores/: scan.js
