[package]
name = "iot-doctor"
version = "0.1.0"
description = "A security diagnostic and educational tool for home IoT devices"
authors = ["KOSEN Programming Contest Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "iot_doctor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
mac_address = "1"
network-interface = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
dns-lookup = "2.0"
mdns-sd = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
quick-xml = "0.36"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
